objects/SFDC_Release__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Release_Date__c</fullName>
        <inlineHelpText>Actual date of Release to Production</inlineHelpText>
        <label>Actual Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alternate_Sandbox__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alternate Sandbox</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>IS_Environment__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Salesforce Sandbox</value>
            </filterItems>
            <filterItems>
                <field>IS_Environment__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <infoMessage>Selection must be an Active record of type Sandbox Instance</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>IS_Environment__c</referenceTo>
        <relationshipLabel>SFDC Releases (Alternate Sandbox)</relationshipLabel>
        <relationshipName>SFDC_Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_permission_to_SOX_field_data__c</fullName>
        <inlineHelpText>Does anything in the release add, change, delete and/or view any security permissions to data in any SOX related fields.</inlineHelpText>
        <label>Change permission to SOX field data</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_permission_to_SOX_field_structure__c</fullName>
        <inlineHelpText>Does anything in the release add, change and/or delete security permissions to modify the data structure in any SOX related fields.</inlineHelpText>
        <label>Change permission to SOX field structure</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Changes_to_SOX_Field_Struction__c</fullName>
        <inlineHelpText>Does anything in the release structurally add to, delete or modify any of the SOX designated fields?</inlineHelpText>
        <label>Changes to SOX field structure?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Changes_to_SOX_field_Data__c</fullName>
        <inlineHelpText>Does anything in the release change, add or delete any data in SOX designated fields as a one-time incident?</inlineHelpText>
        <label>Changes to SOX field data - one time?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Changes_to_SOX_field_data_recurring__c</fullName>
        <inlineHelpText>Does anything in the release change, add or delete any data in SOX designated fields, either manually or automatically (programmatically) on a recurring basis?</inlineHelpText>
        <label>Changes to SOX field data - recurring?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Coding_Actual_Hrs__c</fullName>
        <label>Coding: Actual Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Coding_Estimated_Hrs__c</fullName>
        <label>Coding: Estimated Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Config_Actual_Hrs__c</fullName>
        <label>Config: Actual Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Config_Estimated_Hrs__c</fullName>
        <label>Config: Estimated Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Test_Environments__c</fullName>
        <inlineHelpText>Legacy sandbox field - read only</inlineHelpText>
        <label>z1_Current Test Environments</label>
        <picklist>
            <picklistValues>
                <fullName>Sandbox-Dev1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandbox-Dev2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandbox-Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandbox-Project Specific</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Design_Actual_Hrs__c</fullName>
        <label>Design: Actual Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_Estimated_Hrs__c</fullName>
        <label>Design: Estimated Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dev_Sandbox__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dev Sandbox</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>IS_Environment__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Salesforce Sandbox</value>
            </filterItems>
            <filterItems>
                <field>IS_Environment__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>IS_Environment__c.Environment_Type__c</field>
                <operation>equals</operation>
                <value>Development</value>
            </filterItems>
            <infoMessage>Selection must be an Active Development sandbox of type Sandbox Instance</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>IS_Environment__c</referenceTo>
        <relationshipLabel>SFDC Releases (Dev Sandbox)</relationshipLabel>
        <relationshipName>SFDC_Releases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Environment_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Environment Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SFDC_Releases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_LP_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External LP Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IS_QA_Actual_Hrs__c</fullName>
        <label>IS QA: Actual Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IS_QA_Estimated_Hrs__c</fullName>
        <label>IS QA: Estimated Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LP_Project__c</fullName>
        <description>Link to the project in LP.</description>
        <formula>IF ( NOT( ISBLANK( External_LP_Id__c ) ), 
HYPERLINK( $Setup.Liquid_Planner_Settings__c.API_URL__c + &quot;/space/&quot; + $Label.Workspace_Id + &quot;/projects/show/&quot; + External_LP_Id__c, &quot;View in Liquid Planner&quot;), 
null 
)</formula>
        <label>LP Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Change_Requests__c</fullName>
        <label>No. of Change Requests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Manual_Setup_Mods__c</fullName>
        <label>No. of Manual Setup Mods</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Modifications__c</fullName>
        <label>No. of Modifications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_SOX_Requests__c</fullName>
        <label>No. of SOX Requests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planning_Deployment_Migrations__c</fullName>
        <description>Created for CR-20141204-8244.</description>
        <label>Planning-Deployment/Migrations</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Planning_Resources__c</fullName>
        <description>Created for CR-20141204-8244.</description>
        <label>Planning-Resources</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Planning_Timeline__c</fullName>
        <description>Created for CR-20141204-8244.</description>
        <label>Planning-Timeline</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Postmortem_Notes__c</fullName>
        <description>Created for CR-20141204-8244.</description>
        <label>Postmortem Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Published_to_SVN__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have all Release items been published to SVN?</inlineHelpText>
        <label>Published to SVN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QA_Sandbox__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA Sandbox</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>IS_Environment__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Salesforce Sandbox</value>
            </filterItems>
            <filterItems>
                <field>IS_Environment__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>IS_Environment__c.Environment_Type__c</field>
                <operation>equals</operation>
                <value>QA</value>
            </filterItems>
            <infoMessage>Selection must be an Active QA sandbox of type Sandbox Instance</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>IS_Environment__c</referenceTo>
        <relationshipLabel>SFDC Releases (QA Sandbox)</relationshipLabel>
        <relationshipName>SFDC_Releases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recommended_SOX_Testing_Scenarios__c</fullName>
        <inlineHelpText>Which SOX Certification Test Scripts are recommended for this release?</inlineHelpText>
        <label>Recommended SOX Testing Scenarios</label>
        <picklist>
            <controllingField>SOX_Certification_Type__c</controllingField>
            <picklistValues>
                <fullName>All - Full Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Book a new NBB Contract from Opps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modify an Existing Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drop an Existing ATL Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modify Contract as Non-Finance Ops User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Book Contract from Existing Renewal Opp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create a New Institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attempt to Delete an Institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attempt to Delete a Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete an Existing Integrated Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Integ&apos;d Acct to Existing Membership</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Regression_Tester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The SFDC Admin who verified and approved Regression Testing results</inlineHelpText>
        <label>Regression Tester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regression_Testing_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Regression Testing has been performed and all items passed.</inlineHelpText>
        <label>Regression Testing Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regression_Testing_Completion_Date__c</fullName>
        <label>Regression Testing Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rehearse_Sandbox__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rehearse Sandbox</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>IS_Environment__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Salesforce Sandbox</value>
            </filterItems>
            <filterItems>
                <field>IS_Environment__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>IS_Environment__c.Environment_Type__c</field>
                <operation>equals</operation>
                <value>Rehearse, UAT</value>
            </filterItems>
            <infoMessage>Selection must be an Active Salesforce Sandbox with an Environment Type of Rehearse or UAT</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>IS_Environment__c</referenceTo>
        <relationshipLabel>SFDC Releases (Rehearse Sandbox)</relationshipLabel>
        <relationshipName>SFDC_Releases3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SFDC_Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Notes__c</fullName>
        <inlineHelpText>Describe the items that were included with this release</inlineHelpText>
        <label>Release Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SOX_Certification_AP__c</fullName>
        <label>SOX Certification (AP)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SOX_Certification_Core__c</fullName>
        <label>SOX Certification (Core)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SOX_Certification_Date__c</fullName>
        <inlineHelpText>Date the release passed SOX Certification in a Sandbox environment.</inlineHelpText>
        <label>SOX Certification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SOX_Certification_FFDC__c</fullName>
        <label>SOX Certification (FFDC)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SOX_Certification_Primary_Tester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Person who verified the SOX Certification and approved deploying the release to production.</inlineHelpText>
        <label>SOX Certification Primary Tester</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SFDC Releases</relationshipLabel>
        <relationshipName>Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SOX_Certification_Type__c</fullName>
        <inlineHelpText>What type of SOX Certification Testing is required for this release?</inlineHelpText>
        <label>SOX Certification Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SOX_Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>All SOX testing has been completed successfully without errors/issues</inlineHelpText>
        <label>SOX Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SOX_Notes__c</fullName>
        <description>Created for CR-20141204-8244</description>
        <label>SOX Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SOX_Primary_Tester_AP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SOX Primary Tester (AP)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SFDC Releases (SOX Primary Tester (AP))</relationshipLabel>
        <relationshipName>SFDC_Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SOX_Primary_Tester_Core__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SOX Primary Tester (Core)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SFDC Releases (SOX Primary Tester (Core))</relationshipLabel>
        <relationshipName>SFDC_Releases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SOX_Primary_Tester_FFDC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SOX Primary Tester (FFDC)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SFDC Releases (SOX Primary Tester (FFDC))</relationshipLabel>
        <relationshipName>SFDC_Releases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVN_Deployment_Notes__c</fullName>
        <inlineHelpText>Enter any notes/comments about the SVN publishing and deployment process (eg: items that must be configured manually)</inlineHelpText>
        <label>SVN/Deployment Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SVN_Published_Date__c</fullName>
        <inlineHelpText>Date release items were published to SVN</inlineHelpText>
        <label>SVN Published Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVN_Publisher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SVN Publisher</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Releases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVN_Revision_Number__c</fullName>
        <inlineHelpText>Revision Number of the published SVN package</inlineHelpText>
        <label>SVN Revision Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sandbox_Backup__c</fullName>
        <inlineHelpText>Make a Config Backup of Production prior to deploying changes. Enter the name of the Backup Sandbox here.</inlineHelpText>
        <label>Sandbox Backup</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sandbox_Environments__c</fullName>
        <formula>IF(NOT(ISBLANK(Dev_Sandbox__c)), Dev_Sandbox__r.Sandbox_Name__c, &quot;dev_&quot; &amp; IMAGE(&apos;/img/msg_icons/warning16.gif&apos;,&apos;Not Defined&apos;)) &amp; &quot; ➡ &quot; &amp;
IF(NOT(ISBLANK(QA_Sandbox__c)), QA_Sandbox__r.Sandbox_Name__c &amp; &quot; ➡ &quot;, &quot;&quot;) &amp;
IF(NOT(ISBLANK(UAT_Sandbox__c)), UAT_Sandbox__r.Sandbox_Name__c, &quot;uat_&quot; &amp; IMAGE(&apos;/img/msg_icons/warning16.gif&apos;,&apos;Not Defined&apos;)) &amp; &quot; ➡ &quot; &amp;
&quot;Prod&quot;</formula>
        <label>Sandbox Environments</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sandbox_Primary__c</fullName>
        <inlineHelpText>Enter the name of the sandbox used for initial development and testing for this Release.</inlineHelpText>
        <label>Sandbox - Primary</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_CreateDate_Sort__c</fullName>
        <description>Used for sorting the values in list views or related lists.  Originally created for the related lists on IS Environment</description>
        <formula>CASE(TEXT(Status__c),
  &apos;Deployed&apos;,&apos;2&apos;,
  &apos;Cancelled&apos;,&apos;1&apos;,
  &apos;9&apos;)
&amp; &apos;-&apos;
&amp; TEXT(YEAR(DATEVALUE(CreatedDate)))
&amp; LPAD(TEXT(MONTH(DATEVALUE(CreatedDate))),2,&apos;0&apos;)
&amp; LPAD(TEXT(DAY(DATEVALUE(CreatedDate))),2,&apos;0&apos;)
&amp; IF(AND(NOT(ISPICKVAL(Status__c,&apos;Deployed&apos;)),NOT(ISPICKVAL(Status__c,&apos;Cancelled&apos;))),
  &apos; &apos; &amp; IMAGE(&apos;/img/staleValue.gif&apos;,TEXT(Status__c)),
  &apos;&apos;)</formula>
        <label>Status-CreateDate Sort</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Scheduled - Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled - Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Regression Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for SOX Certification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Story_Points__c</fullName>
        <label>Story Points</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Release_Date__c</fullName>
        <inlineHelpText>Date the change request items associated with this list are scheduled to be available to users in Production.</inlineHelpText>
        <label>Target Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_IS_CRM_Actual_Hrs__c</fullName>
        <label>Total IS CRM Actual Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_IS_CRM_Estimated_Hrs__c</fullName>
        <label>Total IS CRM Estimated Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UAT_Sandbox__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UAT Sandbox</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>IS_Environment__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Salesforce Sandbox</value>
            </filterItems>
            <filterItems>
                <field>IS_Environment__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>IS_Environment__c.Environment_Type__c</field>
                <operation>equals</operation>
                <value>UAT</value>
            </filterItems>
            <infoMessage>Selection must be an Active UAT sandbox of type Sandbox Instance</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>IS_Environment__c</referenceTo>
        <relationshipLabel>SFDC Releases (UAT Sandbox)</relationshipLabel>
        <relationshipName>SFDC_Releases4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Documentation_Actual_Hrs__c</fullName>
        <label>User Documentation: Actual Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>SFDC Release</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Target_Release_Date__c</columns>
        <columns>Actual_Release_Date__c</columns>
        <columns>SOX_Certification_Type__c</columns>
        <columns>No_of_Change_Requests__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_deployed</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Target_Release_Date__c</columns>
        <columns>No_of_Change_Requests__c</columns>
        <columns>Actual_Release_Date__c</columns>
        <columns>SOX_Certification_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Deployed</value>
        </filters>
        <filters>
            <field>Target_Release_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All -  deployed</label>
    </listViews>
    <listViews>
        <fullName>All_not_deployed</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Target_Release_Date__c</columns>
        <columns>No_of_Change_Requests__c</columns>
        <columns>Actual_Release_Date__c</columns>
        <columns>SOX_Certification_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Deployed,Cancelled</value>
        </filters>
        <filters>
            <field>Target_Release_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All - not deployed</label>
    </listViews>
    <listViews>
        <fullName>All_with_QA_Hours</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Target_Release_Date__c</columns>
        <columns>IS_QA_Estimated_Hrs__c</columns>
        <columns>IS_QA_Actual_Hrs__c</columns>
        <columns>No_of_Change_Requests__c</columns>
        <columns>Actual_Release_Date__c</columns>
        <columns>SOX_Certification_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Deployed,Cancelled</value>
        </filters>
        <filters>
            <field>Target_Release_Date__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>Workday Release</value>
        </filters>
        <label>All - with QA Hours</label>
    </listViews>
    <listViews>
        <fullName>All_with_record_type</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Target_Release_Date__c</columns>
        <columns>Actual_Release_Date__c</columns>
        <columns>SOX_Certification_Type__c</columns>
        <columns>No_of_Change_Requests__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All_with_record_type</label>
    </listViews>
    <listViews>
        <fullName>Closed_ALL</fullName>
        <columns>NAME</columns>
        <columns>Target_Release_Date__c</columns>
        <columns>Actual_Release_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Regression_Testing_Completion_Date__c</columns>
        <columns>SVN_Published_Date__c</columns>
        <columns>SOX_Certification_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Deployed</value>
        </filters>
        <label>Closed - ALL</label>
        <sharedTo>
            <group>InformationSystems</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_No_Workday</fullName>
        <columns>NAME</columns>
        <columns>Target_Release_Date__c</columns>
        <columns>Actual_Release_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Regression_Testing_Completion_Date__c</columns>
        <columns>SVN_Published_Date__c</columns>
        <columns>SOX_Certification_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Deployed</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>Workday</value>
        </filters>
        <label>Closed - No Workday</label>
        <sharedTo>
            <group>InformationSystems</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Past_6_Months</fullName>
        <columns>NAME</columns>
        <columns>Target_Release_Date__c</columns>
        <columns>Actual_Release_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Regression_Testing_Completion_Date__c</columns>
        <columns>SVN_Published_Date__c</columns>
        <columns>SOX_Certification_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Deployed</value>
        </filters>
        <filters>
            <field>Actual_Release_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_MONTHS:6</value>
        </filters>
        <label>Closed - Past 6 Months</label>
        <sharedTo>
            <group>InformationSystems</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Closed_Projects</fullName>
        <columns>NAME</columns>
        <columns>Target_Release_Date__c</columns>
        <columns>Actual_Release_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Regression_Testing_Completion_Date__c</columns>
        <columns>SVN_Published_Date__c</columns>
        <columns>SOX_Certification_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Deployed</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>release,hypercare</value>
        </filters>
        <label>Closed - Projects</label>
        <sharedTo>
            <group>InformationSystems</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Deployed</fullName>
        <columns>NAME</columns>
        <columns>Target_Release_Date__c</columns>
        <columns>Actual_Release_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Regression_Testing_Completion_Date__c</columns>
        <columns>SVN_Published_Date__c</columns>
        <columns>SOX_Certification_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Deployed</value>
        </filters>
        <filters>
            <field>Actual_Release_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>3/27/2014</value>
        </filters>
        <label>NK&apos;s Release View</label>
        <sharedTo>
            <group>InformationSystems</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Deployment_11_3</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Target_Release_Date__c</field>
            <operation>equals</operation>
            <value>4/20/2016</value>
        </filters>
        <label>Deployment 4/20</label>
    </listViews>
</CustomObject>